tamanho do Canvas

--- a/content/comecando.ipynb
+++ b/content/comecando.ipynb
@@ -63,6 +63,28 @@
          "source": [
             "%show"
          ]
+      },
+      {
+         "cell_type": "markdown",
+         "metadata": {},
+         "source": [
+            "## Mudar o tamanho do Canvas\n",
+            "\n",
+            "O `Canvas` é o local onde você vai desenhar. O tamanho dele é dado em pixels e ele é sempre retangular.\n",
+            "\n",
+            "Para mudar o tamanho do canvas mude os valores dos parâmetros da função `createcanvas(largura, altura)`.\n",
+            "\n",
+            "- `largura` = largura em pixels do Canvas\n",
+            "- `algura` = altura em pixels do Canvas\n",
+            "\n",
+            "Exemplo:\n",
+            "\n",
+            "```js\n",
+            "createCanvas(600,400)\n",
+            "```\n",
+            "\n",
+            "A chamada de função acima cria um `Canvas` de 600 pixels de largura por 400 pixels de altura."
+         ]
       }
    ],
    "metadata": {
