mudar cor de fundo

--- a/content/comecando.ipynb
+++ b/content/comecando.ipynb
@@ -85,6 +85,46 @@
             "\n",
             "A chamada de função acima cria um `Canvas` de 600 pixels de largura por 400 pixels de altura."
          ]
+      },
+      {
+         "cell_type": "markdown",
+         "metadata": {},
+         "source": [
+            "## Mudar a cor de fundo do Canvas\n",
+            "\n",
+            "Para mudar a cor de fund do Canvas chamamos a função `background()` passando como parâmetro para ela a `cor` que queremos. \n",
+            "\n",
+            "A cor pode ser definida como:\n",
+            "\n",
+            "- um valor entre 0 e 255: escala de cinzas, onde 0 = preto; 255 = branco; cinza médio = 127; etc..\n",
+            "- tres números (entre 0 e 255) representando uma mistura das cores Vermelho, Verde e Azul (RGB)\n",
+            "- o mesmo valor RGB porém representado em hexadecimal, precedido por `#`: #FF00FF, #AA33CD, etc..\n",
+            "\n",
+            "Exemplo, para mudar a cor do azul para `azul celeste` mude os valores de `background()` para `135, 206, 235`. Assim:"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": null,
+         "metadata": {},
+         "outputs": [],
+         "source": [
+            "function setup() {\n",
+            "    createCanvas(400, 400);\n",
+            "}\n",
+            "function draw() {\n",
+            "    background(135, 206, 235);\n",
+            "}"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": null,
+         "metadata": {},
+         "outputs": [],
+         "source": [
+            "%show"
+         ]
       }
    ],
    "metadata": {
