de notebooks para livro

--- a/content/livro/00-introducao.ipynb
+++ b/content/livro/00-introducao.ipynb
@@ -110,7 +110,31 @@
     "}\n",
     "console.log(total);\n",
     "// → 55\n",
-    "```\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "var total = 0, count = 1;\n",
+    "while (count <= 10) {\n",
+    "  total += count;\n",
+    "  count += 1;\n",
+    "}\n",
+    "console.log(total);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "Essa versão nos dá algumas melhorias. A mais importante delas é o fato de que não é mais necessário especificar a forma que desejamos que o programa salte para o início ou fim. A construção `while` é responsável por cuidar disso, continuando a execução do bloco (envolvido pelas chaves) abaixo dela enquanto a condição de execução que foi informada continua válida. Essa condição é dada por `count <= 10`, que significa \"`count` é menor ou igual a 10\". Nós não precisamos criar um valor temporário e compará-lo a zero, que era um detalhe não muito interessante. Parte do poder das linguagens de programação é o fato de que elas tomam conta desses detalhes não muito interessantes para nós.\n",
     "\n",
@@ -121,7 +145,26 @@
     "```js\n",
     "console.log(sum(range(1, 10)));\n",
     "// → 55\n",
-    "```\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "console.log(sum(range(1, 10)));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "A moral de toda essa história é que o mesmo programa pode ser expresso de formas curtas e longas, legíveis ou não. A primeira versão do programa era extremamente complicada e obscura, enquanto que a última versão é praticamente legível usando a linguagem natural: `log` (imprima) a `sum` (soma) de um `range` (intervalo) de números de 1 a 10. Iremos aprender em [capítulos posteriores](./04-estruturas-de-dados.md) como construir operações como `sum` e `range`.\n",
     "\n",
