--- a/content/livro/01-valores-tipos-operadores.ipynb
+++ b/content/livro/01-valores-tipos-operadores.ipynb
@@ -239,7 +239,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "\"This is the first line\\nAnd this is the second\""
+        "console.log(\"This is the first line\\nAnd this is the second\")"
       ]
     },
     {
@@ -260,7 +260,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "\"A newline character is written like \\\"\\\\n\\\".\""
+        "console.log(\"A newline character is written like \\\"\\\\n\\\".\")"
       ]
     },
     {
@@ -281,7 +281,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "\"con\" + \"cat\" + \"e\" + \"nate\""
+        "console.log(\"con\" + \"cat\" + \"e\" + \"nate\")"
       ]
     },
     {
