--- a/content/livro/02-estrutura-do-programa.ipynb
+++ b/content/livro/02-estrutura-do-programa.ipynb
@@ -54,7 +54,7 @@
         "Como um programa mantém um estado interno? Como ele se lembra das coisas? Nós vimos como produzir novos valores com valores antigos, mas isso não altera os valores antigos, e o valor novo deve ser imediatamente usado ou vai ser dissipado. Para pegar e guardar valores, o JavaScript fornece uma coisa chamada *variável*.\n",
         "\n",
         "```javascript\n",
-        "var caught = 5 * 5;\n",
+        "let resultado = 5 * 5;\n",
         "```\n"
       ]
     },
@@ -64,7 +64,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "var caught = 5 * 5;"
+        "let resultado = 5 * 5;"
       ]
     },
     {
@@ -72,15 +72,15 @@
       "metadata": {},
       "source": [
         "\n",
-        "E isso nos dá um segundo tipo de declaração. A palavra especial (palavra-chave) `var` indica que esta sentença vai definir uma variável. Ela é seguida pelo nome da variável e, se nós quisermos dá-la imediatamente um valor, por um operador `=` e uma expressão.\n",
+        "E isso nos dá um segundo tipo de declaração. A palavra especial (palavra-chave) `let` indica que esta sentença vai definir uma variável. Ela é seguida pelo nome da variável e, se nós quisermos dá-la imediatamente um valor, por um operador `=` e uma expressão.\n",
         "\n",
-        "A declaração anterior criou uma variável chamada `caught` e a usou para armazenar o valor que foi produzido pela multiplicação 5 por 5.\n",
+        "A declaração anterior criou uma variável chamada `resultado` e a usou para armazenar o valor que foi produzido pela multiplicação 5 por 5.\n",
         "\n",
         "Depois de uma variável ter sido definida, seu nome pode ser usado como uma expressão. O valor da expressão é o valor atual mantido pela variável. Aqui temos um exemplo:\n",
         "\n",
         "```javascript\n",
-        "var ten = 10;\n",
-        "console.log(ten * ten);\n",
+        "let dez = 10;\n",
+        "console.log(dez * dez);\n",
         "// 100\n",
         "```\n"
       ]
@@ -91,8 +91,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "var ten = 10;\n",
-        "console.log(ten * ten);"
+        "let  dez = 10;\n",
+        "console.log(dez * dez);"
       ]
     },
     {
@@ -105,12 +105,12 @@
         "Quando uma variável aponta para um valor, isso não significa que estará ligada ao valor para sempre. O operador `=` pode ser usado a qualquer hora em variáveis existentes para desconectá-las de seu valor atual e então apontá-las para um novo:\n",
         "\n",
         "```javascript\n",
-        "var mood = \"light\";\n",
-        "console.log(mood);\n",
-        "// light \n",
-        "mood = \"dark\";\n",
-        "console.log(mood);\n",
-        "// dark\n",
+        "let clima = \"leve\";\n",
+        "console.log(clima);\n",
+        "// leve \n",
+        "clima = \"tenso\";\n",
+        "console.log(clima);\n",
+        "// tenso\n",
         "```\n"
       ]
     },
@@ -120,11 +120,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "var mood = \"light\";\n",
-        "console.log(mood);\n",
+        "let clima = \"leve\";\n",
+        "console.log(clima);\n",
         "\n",
-        "mood = \"dark\";\n",
-        "console.log(mood);"
+        "clima = \"tenso\";\n",
+        "console.log(clima);\n"
       ]
     },
     {
@@ -142,7 +142,7 @@
         "\n",
         "```javascript\n",
         "\n",
-        "var luigisDebt = 140;\n",
+        "let luigisDebt = 140;\n",
         "luigisDebt = luigisDebt - 35;\n",
         "console.log(luigisDebt);\n",
         "// 105\n",
@@ -156,7 +156,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "var luigisDebt = 140;\n",
+        "let luigisDebt = 140;\n",
         "luigisDebt = luigisDebt - 35;\n",
         "console.log(luigisDebt);"
       ]
@@ -168,7 +168,7 @@
         "\n",
         "## Palavras-chave e Palavras Reservadas\n",
         "\n",
-        "Palavras que tem um significado especial, como `var`, não podem ser usadas como nomes de variáveis. Estas são chamadas *keywords* (palavras-chave). Existe também algumas palavras que são reservadas para uso em futuras versões do JavaScript. Estas também não são oficialmente autorizadas a serem utilizadas como nomes de variáveis, embora alguns ambientes JavaScript as permitam. A lista completa de palavras-chave e palavras reservadas é um pouco longa:\n",
+        "Palavras que tem um significado especial, como `let`, não podem ser usadas como nomes de variáveis. Estas são chamadas *keywords* (palavras-chave). Existe também algumas palavras que são reservadas para uso em futuras versões do JavaScript. Estas também não são oficialmente autorizadas a serem utilizadas como nomes de variáveis, embora alguns ambientes JavaScript as permitam. A lista completa de palavras-chave e palavras reservadas é um pouco longa:\n",
         "\n",
         "`break` `case` `catch` `continue` `debugger` `default` `delete` `do` `else` `false` `finally` `for` `function` `if` `implements` `in` `instanceof` `interface` `let` `new` `null` `package` `private` `protected` `public` `return` `static` `switch` `throw` `true` `try` `typeof` `var` `void` `while` `with` `yield` `this`\n",
         "\n",
@@ -212,7 +212,7 @@
         "Quando rodarmos os exemplos ou seu próprio código nas páginas deste livro, o `console.log` vai mostrar embaixo o exemplo, ao invés de ser no console JavaScript.\n",
         "\n",
         "```javascript\n",
-        "var x = 30;\n",
+        "let x = 30;\n",
         "console.log(\"o valor de x é \", x);\n",
         "// o valor de x é 30\n",
         "```\n"
@@ -224,7 +224,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "var x = 30;\n",
+        "let x = 30;\n",
         "console.log(\"o valor de x é \", x);"
       ]
     },
@@ -336,7 +336,7 @@
         "Quando seu programa contém mais que uma declaração, as declarações são executadas, previsivelmente, de cima para baixo. Como um exemplo básico, este programa tem duas declarações. A primeira pergunta ao usuário por um número, e a segunda, que é executada posteriormente, mostra o quadrado deste número:\n",
         "\n",
         "```javascript\n",
-        "var theNumber = Number(prompt(\"Pick a number\", \"\"));\n",
+        "let theNumber = Number(prompt(\"Pick a number\", \"\"));\n",
         "alert(\"Your number is the square root of \" + theNumber * theNumber);\n",
         "```\n"
       ]
@@ -347,7 +347,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "var theNumber = Number(prompt(\"Pick a number\", \"\"));\n",
+        "let theNumber = Number(prompt(\"Pick a number\", \"\"));\n",
         "alert(\"Your number is the square root of \" + theNumber * theNumber);"
       ]
     },
