estrutura com let

--- a/content/livro/02-estrutura-do-programa.ipynb
+++ b/content/livro/02-estrutura-do-programa.ipynb
@@ -371,7 +371,7 @@
         "A execução condicional é escrita, em JavaScript, com a palavra-chave `if`. No caso mais simples, nós queremos que algum código seja executado se, e somente se, uma certa condição existir. No programa anterior, por exemplo, podemos mostrar o quadrado do dado fornecido como entrada apenas se ele for realmente um número.\n",
         "\n",
         "```js\n",
-        "var theNumber = Number(prompt(\"Pick a number\", \"\"));\n",
+        "let theNumber = Number(prompt(\"Pick a number\", \"\"));\n",
         "if (!isNaN(theNumber))\n",
         "  alert(\"Your number is the square root of \" +\n",
         "        theNumber * theNumber);\n",
@@ -384,7 +384,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "var theNumber = Number(prompt(\"Pick a number\", \"\"));\n",
+        "let theNumber = Number(prompt(\"Pick a number\", \"\"));\n",
         "if (!isNaN(theNumber))\n",
         "  alert(\"Your number is the square root of \" +\n",
         "        theNumber * theNumber);"
